src/objects/SurveyTaker__c.object
<CustomObject>
<!---->
<!---->
    <description>Survey Force object</description>
<!--    <fields>-->
<!--        <fullName>Case__c</fullName>-->
<!--        <deleteConstraint>SetNull</deleteConstraint>-->
<!--        <externalId>false</externalId>-->
<!--        <label>Case</label>-->
<!--        <referenceTo>Case</referenceTo>-->
<!--        <relationshipName>SurveyTakers</relationshipName>-->
<!--        <required>false</required>-->
<!--        <trackTrending>false</trackTrending>-->
<!--        <type>Lookup</type>-->
<!--    </fields>-->
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This can be used to enforce uniqueness for a survey and the people who take it</description>
        <inlineHelpText>Was the survey completed?</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Taken By Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys Taken</relationshipLabel>
        <relationshipName>SurveyTakers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Required field because a response without a survey is irrelevant</description>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Surveys Taken</relationshipLabel>
        <relationshipName>SurveyTakers1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Taken__c</fullName>
        <description>Whether the survey was taken or not</description>
        <label>Taken</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Taken By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surveys_Taken</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Taker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Survey__c</columns>
        <columns>User__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Survey Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Takers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>